agrego zoom en noticias y linkeo

--- a/noticias.html
+++ b/noticias.html
@@ -26,18 +26,18 @@
       </nav>
     </header>
     <main>
-    <!-- section#4-->
       <section>
         <div class="bloque parallax cover-12"></div>
         <div class="bloque">
           <div class="container-fluid">
             <div class="d-grid grid-list-container-news">
               <div class="card">
-                <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">
+                <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-20Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+           
               <div class="container-card bg-dorado">
                 <div class="course-info">
-                  <h6>07 Diciembre 2022</h6>
-                  <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                  <h6>22 Febrero 2023</h6>
+                  <h3>El galadornado juego de rol y acion Elden Ring vende 20 millones de copias en todo el mundo</h3>
                 </div>
               </div>
             </div>
@@ -46,11 +46,37 @@
                 <div class="courses-container">
                   <div class="course">
                     <div class="course-preview">
-                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">
                     </div>
                     <div class="course-info">
                       <h6>07 Diciembre 2022</h6>
-                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                      <h4>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h4>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-12Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>27 Junio 2022</h6>
+                      <h4>ELDEN RING <br /> alcanza los 12 millones de copias vendidas en todo el mundo</h4>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Early_Game_Tips/Elden_Ring_Early_Game_Tips_2.png?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>16 Marzo 2022</h6>
+                      <h4>ELDEN RING <br /> Consejos para empezar a jugar</h4>
                     </div>
                   </div>
                 </div>
@@ -62,8 +88,8 @@
                       <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
                     </div>
                     <div class="course-info">
-                      <h6>07 Diciembre 2022</h6>
-                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                      <h6>14 Marzo 2022</h6>
+                      <h4>El gran luchador Israel Adesanya tiene un mensaje para los jugadores "cuando caigas, no pierdas la fe" en el nuevo tráiler de ELDEN RING </h4>
                     </div>
                   </div>
                 </div>
@@ -72,47 +98,21 @@
                 <div class="courses-container">
                   <div class="course">
                     <div class="course-preview">
-                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER_Videosfromthecommunity.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
                     </div>
                     <div class="course-info">
-                      <h6>07 Diciembre 2022</h6>
-                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
-                    </div>
-                  </div>
-                </div>
-              </article>
-              <article>
-                <div class="courses-container">
-                  <div class="course">
-                    <div class="course-preview">
-                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                    </div>
-                    <div class="course-info">
-                      <h6>07 Diciembre 2022</h6>
-                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
-                    </div>
-                  </div>
-                </div>
-              </article>
-              <article>
-                <div class="courses-container">
-                  <div class="course">
-                    <div class="course-preview">
-                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                    </div>
-                    <div class="course-info">
-                      <h6>07 Diciembre 2022</h6>
-                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                      <h6>25 Febrero 2022</h6>
+                      <h4>ELDEN RING <br /> Consejos que te ayudaran en las Tierras Intermedias!</h4>
                     </div>
                   </div>
                 </div>
                 <div class="text-center py-1">
-                  <button class="btn"> ver </button>
+                   <a href="https://es.bandainamcoent.eu/live?title=ELDEN%20RING#search-news" target="_blank">
+                  <button class="btn"> Ver todas las noticias </button>
+                </a>
                 </div>
               </article>
       </section>
-    
-      <!--section#6-->
       <section>
         <div class="bloque parallax cover-6" id="soporte"></div>
         <div class="bloque">
