agrego linkeo la store

--- a/store.html
+++ b/store.html
@@ -39,7 +39,7 @@
                         <h3>¡Productos exclusivos de tus universos favoritos!</h3>
                         <img class=" bandai-store-imagen" src="./assets/img/merchan1.jpg" alt="Avatar">
                         <div class="py-3">
-                          <a href=""> <button class="btn"> Ver tienda oficial</button></a>
+                          <a href="https://store.bandainamcoent.eu/eu/eldenring" target="_blank"> <button class="btn"> Ver tienda oficial</button></a>
                         </div>
                       </div>
                     </div>
@@ -53,7 +53,7 @@
                         <h3>¡Cambia tus puntos en nuestro club de recompensas EP!C !</h3>
                         <img class="bandai-store-imagen" src="./assets/img/bandaiepicmerch.png" alt="Avatar">
                         <div class="py-3">
-                          <a href=""> <button class="btn"> Ver tienda oficial</button></a>
+                          <a href="https://www.bandainamcoent.com/es_mx/" target="_blank"> <button class="btn"> Ver tienda oficial</button></a>
                         </div>
                       </div>
                     </div>
