cambio el width iconos redes sociales

--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
             <div class="d-grid grid-list-container-news">
               <div class="card">
                 <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/la-proxima-expansion-de-elden-ring-shadow-of-the-erdtree-ha-sido-anunciada" target="_blank">
-                <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/elden-ring-sote-thumbnail.jpg?twic=v1/resize=1740/step=10/quality=80" alt="Avatar" style="width:100%">
+                <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/elden-ring-sote-thumbnail.jpg?twic=v1/resize=1740/step=10/quality=80" alt="noticias" >
               <div class="container-card bg-dorado">
                 <div class="course-info">
                   <h6>1 Marzo 2023</h6>
@@ -52,7 +52,7 @@
                     <div class="courses-container">
                       <div class="course">
                         <div class="course-preview">
-                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-20Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" >
+                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-20Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="noticias" >
                         </div>
                         <div class="course-info">
                           <h6>22 Febrero 2023</h6>
@@ -67,7 +67,7 @@
                     <div class="courses-container">
                       <div class="course">
                         <div class="course-preview">
-                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar">
+                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="noticias">
                         </div>
                         <div class="course-info">
                           <h6>07 Diciembre 2022</h6>
@@ -82,7 +82,7 @@
                       <div class="courses-container">
                         <div class="course">
                           <div class="course-preview">
-                            <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-12Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" >
+                            <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-12Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="noticias" >
                           </div>
                           <div class="course-info">
                             <h6>27 Junio 2022</h6>
@@ -97,7 +97,7 @@
                     <div class="courses-container">
                       <div class="course">
                         <div class="course-preview">
-                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Early_Game_Tips/Elden_Ring_Early_Game_Tips_2.png?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar">
+                          <img class="imagen-noticias" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Early_Game_Tips/Elden_Ring_Early_Game_Tips_2.png?twic=v1/cover=1220x686/step=10/quality=80" alt="noticias">
                         </div>
                         <div class="course-info">
                           <h6>16 Marzo 2022</h6>
@@ -120,7 +120,7 @@
                     <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/el-galardonado-juego-de-rol-y-accion-elden-ring-vende-20-millones-de-copias-en" target="_blank">
                       <div class="d-grid grid-list-container-news">
                         <div class="card">
-                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-20Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">                 
+                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-20Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80"alt="noticias">                 
                           <div class="container-card bg-dorado">
                             <div class="course-info">
                               <h6>22 Febrero 2023</h6>                            
@@ -137,7 +137,7 @@
                     <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/elden-ring-ya-disponible-la-actualizacion-gratuita-del-coliseo" target="_blank">
                       <div class="d-grid grid-list-container-news">
                         <div class="card">
-                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">                 
+                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="noticias" style="width:100%">                 
                           <div class="container-card bg-dorado">
                             <div class="course-info">
                               <h6>22 Febrero 2023</h6>
@@ -154,7 +154,7 @@
                     <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/elden-ring-alcanza-los-12-millones-de-copias-vendidas-en-todo-el-mundo" target="_blank">
                       <div class="d-grid grid-list-container-news">
                         <div class="card">
-                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-12Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">                 
+                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Elden-Ring-12Munits.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="noticias">                 
                           <div class="container-card bg-dorado">
                             <div class="course-info">
                               <h6>27 Junio 2022</h6>
@@ -171,7 +171,7 @@
                     <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/elden-ring-consejos-para-empezar-jugar-elden-ring" target="_blank">
                       <div class="d-grid grid-list-container-news">
                         <div class="card">
-                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Early_Game_Tips/Elden_Ring_Early_Game_Tips_2.png?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">                 
+                            <img class="imagen" src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/Early_Game_Tips/Elden_Ring_Early_Game_Tips_2.png?twic=v1/cover=1220x686/step=10/quality=80" alt="noticias">                 
                           <div class="container-card bg-dorado">
                             <div class="course-info">
                               <h6>16 Marzo 2022</h6>                            
@@ -228,19 +228,19 @@
                         <div class="iconos-flex py-3">
                           <div>
                             <a href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398" target="_blank">
-                              <img class="iconos-item" src="./assets/icons/face.png" alt="facebook" style="width:100%">
+                              <img class="iconos-item" src="./assets/icons/face.png" alt="facebook" >
                             </a>
                             <a href="https://www.instagram.com/bandainamcous/" target="_blank">
-                              <img class="iconos-item" src="./assets/icons/instagram.png" alt="instagram" style="width:100%">
+                              <img class="iconos-item" src="./assets/icons/instagram.png" alt="instagram" >
                             </a>
                             <a href="https://twitter.com/bandainamcoeu/" target="_blank">
-                              <img class="iconos-item"  src="./assets/icons/twitter.png" alt="twitter" style="width:100%">
+                              <img class="iconos-item"  src="./assets/icons/twitter.png" alt="twitter" >
                             </a>
                             <a href="https://www.youtube.com/user/NamcoBandaiGamesEU" target="_blank">
-                              <img class="iconos-item" src="./assets/icons/youtube.png" alt="youtube" style="width:100%">
+                              <img class="iconos-item" src="./assets/icons/youtube.png" alt="youtube" >
                             </a>
                             <a href="https://discord.com/invite/eldenring" target="_blank">
-                              <img class="iconos-item" src="./assets/icons/discord.png" alt="discord" style="width:100%">
+                              <img class="iconos-item" src="./assets/icons/discord.png" alt="discord" >
                             </a>
                           </div>
                         </div>
@@ -254,7 +254,7 @@
               <div class="grupo-1">
                   <div class="box">
                       <figure>
-                          <a href="#">
+                          <a href="./index.html">
                             <img class="logo-footer" src="./assets/img/titlecel.jpg" alt="Elden Ring logo">
                           </a>
                       </figure>
