--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <div class="grupo-1">
               <div class="box">
                   <figure>
-                      <a href="#">
+                      <a ref="./index.html">
                         <img class="logo-footer" src="./assets/img/titlecel.jpg" alt="Elden Ring logo">
                       </a>
                   </figure>
