terminado el nav y el banner

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
   </head>
   <body>
     <header class="header">
-      <!-- Logo -->
       <a  href="./index.html"><img class="logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
-      <!-- Hamburger icon -->
       <input class="side-menu" type="checkbox" id="side-menu"/>
       <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-      <!-- Menu -->
-      <nav class="nav">
-          <ul class="menu">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./noticias.html"> Noticias</a></li>
-              <li><a href="./historia.html">Historia</a></li>
-              <li><a href="./store.html">Store</a></li>
-              <li><a href="./requisitos.html">Requisitos</a></li>
-          </ul>
-      </nav>
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./noticias.html"> Noticias</a></li>
+                <li><a href="./historia.html">Historia</a></li>
+                <li><a href="./store.html">Store</a></li>
+                <li><a href="./requisitos.html">Requisitos</a></li>
+            </ul>
+        </nav>
     </header>
       <main>
         <!--Banner-->
         <section>
-          <div>
+          <div class="solo-pantallas-grandes">
             <video src=" https://static.bandainamcoent.eu/video/elden-ring-header-animated.webm" width="100%" autoplay mute loop>
+          </div>
+          <div class="solo-pantallas-chicas">
+            <img class="img-fluid" src="./assets/img/eldenringbanner.jpg" alt="Elden Ring logo">
           </div>
           <div class="position-center">
             <img class="banner-title" src="./assets/img/titlecel.jpg" alt="Elden Ring logo">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="box2 px-1">
                       <div>
-                        <video src="https://static.bandainamcoent.eu/video/elden-ring-autoplay-launch-trailer.webm" width="100%" height="auto" autoplay mute loop controls> </video>
+                        <video src="https://static.bandainamcoent.eu/video/elden-ring-autoplay-launch-trailer.webm" width="100%" autoplay mute loop> </video>
                       </div>
                     </div>
                   </div>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="box2 px-1">
                       <div>
-                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-01-animated-new.webm" width="100%" height="auto" autoplay mute loop controls> </video>
+                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-01-animated-new.webm" width="100%" autoplay mute loop> </video>
                       </div>
                     </div>
                   </div>
@@ -112,7 +112,7 @@
                     </div>   
                     <div class="box2 px-1">
                       <div>
-                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-02-animated-new.webm" width="100%" height="auto" controls> </video>
+                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-02-animated-new.webm" width="100%" autoplay mute loop> </video>
                       </div>
                     </div>
                   </div>
@@ -122,7 +122,7 @@
                 <div class="justify-content">
                     <div class="box2 px-1">
                       <div>
-                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-02-animated-new.webm" width="100%" height="auto" controls> </video>
+                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-02-animated-new.webm" width="100%" autoplay mute loop> </video>
                       </div>
                     </div>
                   <div class="box1 px-1">
@@ -150,7 +150,7 @@
                     </div>
                     <div class="box2 px-1">
                       <div>
-                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-03-animated-new.webm" width="100%" height="auto"  controls> </video>
+                        <video src="https://static.bandainamcoent.eu/video/eldenring-kf-03-animated-new.webm" width="100%" autoplay mute loop> </video>
                       </div>
                     </div>
                   </div>
