cambio el nombre de historia por tierras intermedias

--- a/noticias.html
+++ b/noticias.html
@@ -12,17 +12,14 @@
   </head>
   <body>
     <header class="header">
-      <!-- Logo -->
       <a  href="./index.html"><img class="logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
-      <!-- Hamburger icon -->
       <input class="side-menu" type="checkbox" id="side-menu"/>
       <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-      <!-- Menu -->
       <nav class="nav">
           <ul class="menu">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./noticias.html">Noticias</a></li>
-              <li><a href="./historia.html">Historia</a></li>
+              <li><a href="./historia.html">Tierras Intermedias</a></li>
               <li><a href="./store.html">Store</a></li>
               <li><a href="./requisitos.html">Requisitos</a></li>
           </ul>
@@ -45,7 +42,6 @@
               </a>
               </div>
             </div>
-              <!--desktop-->
               <div class="solo-pantallas-grandes">
                 <article>
                   <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/el-galardonado-juego-de-rol-y-accion-elden-ring-vende-20-millones-de-copias-en" target="_blank">
@@ -113,7 +109,6 @@
                   </a>
                 </article>
               </div>
-              <!--celu-->
               <div class="solo-pantallas-chicas">
                 <article>
                   <div class="container-fluid py-1">
@@ -285,6 +280,5 @@
         </main>
     </body>
   <script src="./js/index.js"></script>
-    <!--Iconos Fontawesome-->
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </html>
