--- a/historia.html
+++ b/historia.html
@@ -14,24 +14,21 @@
   </head>
   <body>
     <header class="header">
-      <!-- Logo -->
       <a href="./index.html"
         ><img
           class="logo-nav"
           src="./assets/img/titlecel.jpg"
           alt="Elden Ring logo"
       /></a>
-      <!-- Hamburger icon -->
       <input class="side-menu" type="checkbox" id="side-menu" />
       <label class="hamb" for="side-menu"
         ><span class="hamb-line"></span
       ></label>
-      <!-- Menu -->
       <nav class="nav">
         <ul class="menu">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./noticias.html">Noticias</a></li>
-          <li><a href="./historia.html">Historia</a></li>
+          <li><a href="./historia.html">Tierras Intermedias</a></li>
           <li><a href="./store.html">Store</a></li>
           <li><a href="./requisitos.html">Requisitos</a></li>
         </ul>
@@ -335,7 +332,6 @@
     </main>
   </body>
   <script src="./js/index.js"></script>
-  <!--Iconos Fontawesome-->
   <script
     src="https://kit.fontawesome.com/eb496ab1a0.js"
     crossorigin="anonymous"
