agrego index multimedia

--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
             </article>       
           </section>
           <section>
-            <div class="bloque parallax cover-3">
-            </div>
+            <div class="bloque parallax cover-3"></div>
             <div class="bloque py-3">
                 <div class="contenedor" id="personajes">
                     <div class="text-center color-blanco py-3">
