agrego el link de multimedia en los nav de los index

--- a/noticias.html
+++ b/noticias.html
@@ -21,6 +21,7 @@
               <li><a href="./noticias.html">Noticias</a></li>
               <li><a href="./historia.html">Tierras Intermedias</a></li>
               <li><a href="./store.html">Store</a></li>
+              <li><a href="./multimedia.html">Multimedia</a></li>
               <li><a href="./requisitos.html">Requisitos</a></li>
           </ul>
       </nav>
@@ -30,6 +31,9 @@
         <div class="bloque parallax cover-12"></div>
         <div class="bloque">
           <div class="container-fluid">
+            <div class="text-center color-blanco py-3">
+              <h2>Noticias</h2>
+            </div>
             <div class="d-grid grid-list-container-news">
               <div class="card">
                 <a class="color-negro" href="https://es.bandainamcoent.eu/elden-ring/noticias/la-proxima-expansion-de-elden-ring-shadow-of-the-erdtree-ha-sido-anunciada" target="_blank">
