--- a/store.html
+++ b/store.html
@@ -21,6 +21,7 @@
               <li><a href="./noticias.html">Noticias</a></li>
               <li><a href="./historia.html">Tierras Intermedias </a></li>
               <li><a href="./store.html">Store</a></li>
+              <li><a href="./multimedia.html">Multimedia</a></li>
               <li><a href="./requisitos.html">Requisitos</a></li>
           </ul>
       </nav>
@@ -30,6 +31,9 @@
         <div class="bloque parallax cover-10"></div>
           <div class="bloque">
             <div class="container-fluid">
+              <div class="text-center color-blanco py-3">
+                <h2>Store</h2>
+              </div>
               <div class="justify-content">
                 <div class="box1 px-1 bg-dorado-transparent">
                   <div class="box-suscripto py-3 color-dorado">
