cambio de color los titulos

--- a/historia.html
+++ b/historia.html
@@ -49,7 +49,7 @@
                 />
               </div>
               <div class="py-3">
-                <h2 class="text-center py-2 py-1 color-blanco">
+                <h2 class="text-center py-2 py-1 color-dorado">
                   Los Sinluz de las Tierras Intermedias
                 </h2>
                 <div class="color-grey px-3">
