--- a/store.html
+++ b/store.html
@@ -31,7 +31,7 @@
         <div class="bloque parallax cover-10"></div>
           <div class="bloque">
             <div class="container-fluid">
-              <div class="text-center color-blanco py-3">
+              <div class="text-center color-dorado py-3">
                 <h2>Store</h2>
               </div>
               <div class="justify-content">
