--- a/multimedia.html
+++ b/multimedia.html
@@ -40,7 +40,7 @@
         <div class="bloque parallax cover-13"></div>
         <div class="bloque py-3">
           <div class="contenedor" id="personajes">
-            <div class="text-center color-blanco py-3">
+            <div class="text-center color-dorado py-3">
               <h2>Multimedia</h2>
             </div>
             <div class="slideshow-container">
